--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,20 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+# input data and models
+input/
+models/
+
+# Eddy
+# data files
+*.csv
+*.h5
+*.pkl
+*.pth
+*.txt
+*.bin
+
+venv/
+train.csv
